--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest index.test.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "bench": "./bench/run.sh"
   },
   "keywords": [
     "route",
@@ -22,7 +23,10 @@
     "regexparam": "^1.3.0"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "express": "^4.17.1",
+    "fastify": "^2.6.0",
+    "jest": "^24.8.0",
+    "restify": "^8.3.3"
   },
   "jest": {
     "testEnvironment": "node"
